--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,92 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; /* Cette règle garantit que l'élément occupe toute la hauteur de la fenêtre */
+}
+.home {
+  visibility: visible;
+  position: fixed;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #3b1429;
+  color:#B8B8B8;
+  width: 80%; /* Utiliser un pourcentage pour rendre la largeur adaptable */
+  max-width: 1000px; /* Limiter la largeur maximale */
+  height: 70vh; /* Hauteur en pourcentage de la hauteur de la fenêtre */
+  max-height: 500px; /* Limiter la hauteur maximale */
+
+  font-size: 50px;
   text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Ombre pour ajouter de la profondeur */
+}
+.login{
+  visibility: visible;
+  width: 50%;
+  height: 500px;
+  background-color:white;
+  color: #3b1429;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.873);
+  padding: 20px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  .btn{
+    padding: 20px 30px;
+    border-radius: 10px;
+    background-color: #3b1429;
+    border:1px solid #B8B8B8;
+    color:#B8B8B8;
+    cursor: pointer;  
   }
-  to {
-    transform: rotate(360deg);
+  .btn-login{
+    padding: 10px 35px;
+    border-radius: 10px;
+    background-color: #B8B8B8;
+    border:1px solid #B8B8B8;
+    color:#3b1429;
+    font-size: 20px;
+    font-weight: 800px;
+    cursor: pointer;
+    margin-top: 30px;
+  }
+  h6{
+    text-align: left;
+  }
+  input{
+    width:80%;
+    height: 25px;
+    font-size: 15px;
+    padding: 20px;
+  border-radius: 10px;
+  border: 1px solid #B8B8B8;
+     }
+     .link-ls{
+     display: none;
+      
+      }
+@media screen and (max-width:1000px) {
+  .home {
+visibility: hidden;
+  }
+  .login{
+    visibility: visible;
+   position:fixed;
+  top: 10%;
+   left: 10%; 
+   width: 80%;
+  }
+  .link-ls{
+    visibility: visible;
+    display:flex;
+      justify-content:flex-end;
+      margin:20px;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
